# flow-matching-mnist

./: .gitignore  README.md  pyproject.toml  train.py  train_vae.py
src/: data.py
src/model/: ConvNeXt.py  DiffiT.py  ViT.py  __init__.py  conv.py  transformer.py  util.py  vae.py
