[tool.poetry]
name = "flow-matching-mnist"
version = "0.1.0"
description = ""
authors = ["jacob-papermill <jacob@papermill.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
datasets = "^3.1.0"
matplotlib = "^3.9.3"
accelerate = "^1.1.1"
transformers = "^4.46.3"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
